# wsf

./: .gitignore  CMakeLists.txt
actor/: CMakeLists.txt  wsf-actor.pc.cmakein
actor/source/: Framework.cpp  Framework.hpp  Service.cpp  ServiceCenter.cpp  actor.cpp  main.cpp
actor/source/timer/: ActorTimer.cpp  ActorTimer.hpp  TimerPool.hpp  list.h  timer.c  timer.h
actor/testkits/: CMakeLists.txt
actor/testkits/calc/: calc.hpp  main.cpp  webapi.h
actor/testkits/nose/: Config.py  __init__.py  testCaller.py  testEcho.py  testNotify.py  testTimer.py
actor/testkits/unittest/: main.cpp
actor/testkits/unittest/call/: Caller.hpp  Service.hpp
actor/testkits/unittest/echo/: Echo.hpp  Service.hpp
actor/testkits/unittest/impact/: Caller.hpp  Service.hpp
actor/testkits/unittest/notify/: Pub.hpp  Service.hpp  Sub.hpp
actor/testkits/unittest/timer/: KillTimer.hpp  Service.hpp  SetTimer.hpp
include/wsf/: actor.hpp
include/wsf/actor/: Actor.hpp  Operation.hpp  Service.hpp
include/wsf/actor/inner/: ServiceCenter.hpp  main.inl
include/wsf/gstreamer/: MultipeerEndpoint.hpp  Pipeline.hpp  PipelineTempl.hpp  PipelineTraits.hpp  RtspSourcePipeline.hpp  Service.hpp  WebRTCEndpoint.hpp  gstreamer.hpp
include/wsf/gstreamer/inner/: HttpLayer.hpp
include/wsf/gstreamer/sdp/: SessionDescription.hpp  candidate.hpp
include/wsf/gstreamer/utility/: gst_inter_src.h
include/wsf/transport/: http.hpp  httpws.hpp  transport.hpp  websocket.hpp
include/wsf/util/: logger.hpp  map.hpp  object.hpp  rest.hpp  status_code.hpp  string.hpp  uriparser.hpp
transport/: CMakeLists.txt  wsf-transport.pc.cmakein
transport/include/wsf/transport/http/: IProxy.hpp  IService.hpp
transport/include/wsf/transport/inner/: transport.hpp
transport/include/wsf/transport/websocket/: IBroker.hpp  IProxy.hpp
transport/source/: http.cpp  httpws.cpp  transport.cpp  websocket.cpp
transport/source/http/: IProxy.cpp  IService.cpp  helper.hpp
transport/source/websocket/: IBroker.cpp  IProxy.cpp  helper.hpp
transport/testkits/: CMakeLists.txt
transport/testkits/nose/: __init__.py  testTransport.py
transport/testkits/unittest/: main.cpp
transport/testkits/unittest/http/: http.cpp  http.hpp
transport/testkits/unittest/websocket/: websocket.cpp  websocket.hpp
